--- a/deploy/crds/networking.example.com_nodeenis_crd.yaml
+++ b/deploy/crds/networking.example.com_nodeenis_crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: nodeenis.networking.example.com
+  name: nodeenis.networking.johnlam90.github.io
 spec:
-  group: networking.example.com
+  group: networking.johnlam90.github.io
   names:
     kind: NodeENI
     listKind: NodeENIList
