--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# IDE and editor files
 .history
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Build artifacts
+bin/
+dist/
+vendor/
+coverage.txt
+*.out
+*.test
+
+# Kubernetes generated files
+kubeconfig
+.kube/
+
+# OS specific files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+tmp/
+temp/
+
+# Environment files
+.env
+.envrc
