--- a/deploy/crds/networking.k8s.aws_nodeenis_crd.yaml
+++ b/deploy/crds/networking.k8s.aws_nodeenis_crd.yaml
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: nodeenis.networking.johnlam90.github.io
+  name: nodeenis.networking.k8s.aws
 spec:
-  group: networking.johnlam90.github.io
+  group: networking.k8s.aws
   names:
     kind: NodeENI
     listKind: NodeENIList
