--- a/.github/workflows/go-report.yml
+++ b/.github/workflows/go-report.yml
@@ -10,13 +10,21 @@ jobs:
   go-report:
     name: Go Code Quality
     runs-on: ubuntu-latest
+    env:
+      GOEXPERIMENT: loopvar
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: '1.19'
+          go-version: '1.23'
+          check-latest: true
+
+      - name: Prepare go.mod for CI
+        run: |
+          # Remove toolchain directive for CI compatibility
+          sed -i '/^toolchain/d' go.mod
 
       - name: Check formatting
         run: |
@@ -53,13 +61,5 @@ jobs:
       - name: Run gocyclo
         run: gocyclo -over 15 .
 
-      - name: Update badge
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        uses: schneegans/dynamic-badges-action@v1.6.0
-        with:
-          auth: ${{ secrets.GIST_SECRET }}
-          gistID: ${{ secrets.GIST_ID }}
-          filename: go-report-card.json
-          label: Go Report
-          message: A+
-          color: brightgreen
+      # The workflow itself will serve as the badge
+      # No need for a separate badge update step as we're using the GitHub Actions badge
