--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,6 +26,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Check Go version in Dockerfile and go.mod
+        run: |
+          echo "Checking Go version in Dockerfile..."
+          GO_VERSION_DOCKERFILE=$(grep "FROM golang:" Dockerfile | head -1 | cut -d':' -f2 | cut -d'-' -f1)
+          echo "Go version in Dockerfile: $GO_VERSION_DOCKERFILE"
+
+          echo "Checking Go version in go.mod..."
+          GO_VERSION_GOMOD=$(grep "^go " go.mod | awk '{print $2}')
+          echo "Go version in go.mod: $GO_VERSION_GOMOD"
+
+          if [[ "$GO_VERSION_DOCKERFILE" != "$GO_VERSION_GOMOD" ]]; then
+            echo "Warning: Go version mismatch between Dockerfile ($GO_VERSION_DOCKERFILE) and go.mod ($GO_VERSION_GOMOD)"
+          fi
+
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
@@ -49,8 +63,11 @@ jobs:
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
+        env:
+          DOCKER_BUILDKIT: 1
         with:
           context: .
+          file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
