--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -95,14 +95,14 @@ spec:
       serviceAccountName: eni-controller
       containers:
       - name: manager
-        image: ${UNIFIED_IMAGE}
+        image: ghcr.io/johnlam90/aws-multi-eni-controller:latest
         env:
         - name: COMPONENT
           value: "eni-controller"
         # Users should set this to their preferred AWS region
         # This is a placeholder that should be customized
         - name: AWS_REGION
-          value: "us-west-2"
+          value: "us-east-1"
         args:
         - --metrics-addr=:8080
         - --enable-leader-election
