--- a/.github/workflows/helm-package.yml
+++ b/.github/workflows/helm-package.yml
@@ -19,13 +19,16 @@ on:
         required: true
         default: 'v1.1.1'
 
+env:
+  REGISTRY: ghcr.io
+  CHART_NAME: aws-multi-eni-controller
+
 jobs:
   package-and-publish:
     runs-on: ubuntu-latest
     permissions:
       contents: write  # Needed for creating releases
-      packages: write
-      # Add additional permissions for package management
+      packages: write  # Needed for pushing to GHCR
       actions: read
 
     steps:
@@ -36,6 +39,21 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: 'latest'
+
+      # Set chart version based on tag or input
+      - name: Set chart version from tag
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          # Extract version from tag (remove 'v' prefix)
+          APP_VERSION=${GITHUB_REF#refs/tags/v}
+          CHART_VERSION=${APP_VERSION}
+
+          # Update Chart.yaml with the tag version
+          sed -i "s/^version:.*/version: ${CHART_VERSION}/" charts/aws-multi-eni-controller/Chart.yaml
+          sed -i "s/^appVersion:.*/appVersion: \"v${APP_VERSION}\"/" charts/aws-multi-eni-controller/Chart.yaml
+
+          echo "CHART_VERSION=${CHART_VERSION}" >> $GITHUB_ENV
+          echo "APP_VERSION=v${APP_VERSION}" >> $GITHUB_ENV
 
       - name: Update Chart version if manually triggered
         if: github.event_name == 'workflow_dispatch'
@@ -48,20 +66,38 @@ jobs:
           echo "Updated Chart.yaml:"
           cat charts/aws-multi-eni-controller/Chart.yaml
 
+          echo "CHART_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          echo "APP_VERSION=${{ github.event.inputs.appVersion }}" >> $GITHUB_ENV
+
+      # Package the Helm chart
       - name: Package Helm chart
         run: |
           mkdir -p .helm-charts
           helm package charts/aws-multi-eni-controller -d .helm-charts
 
-          # Get the chart version
-          CHART_VERSION=$(grep "^version:" charts/aws-multi-eni-controller/Chart.yaml | awk '{print $2}')
-          echo "CHART_VERSION=$CHART_VERSION" >> $GITHUB_ENV
-
+      # Create index file for GitHub release
       - name: Create Helm repository index
         run: |
           # Create a simple index file for the chart
           helm repo index .helm-charts --url https://github.com/${{ github.repository }}/releases/download/helm-chart-${{ env.CHART_VERSION }}/
 
+      # Login to GHCR for OCI chart push
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Push Helm chart to GHCR as OCI artifact
+      - name: Push Helm chart to GHCR
+        run: |
+          echo "Pushing Helm chart to GHCR as OCI artifact..."
+          helm push .helm-charts/aws-multi-eni-controller-${{ env.CHART_VERSION }}.tgz oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts
+
+          echo "Chart pushed to: ${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/aws-multi-eni-controller:${{ env.CHART_VERSION }}"
+
+      # Create GitHub release with chart as asset
       - name: Create GitHub Release for Helm Chart
         id: create_release
         uses: softprops/action-gh-release@v1
@@ -71,9 +107,11 @@ jobs:
           body: |
             # AWS Multi-ENI Controller Helm Chart ${{ env.CHART_VERSION }}
 
-            This release contains the Helm chart for AWS Multi-ENI Controller.
+            This release contains the Helm chart for AWS Multi-ENI Controller version ${{ env.APP_VERSION }}.
 
-            ## Installation
+            ## Installation Options
+
+            ### Option 1: Install from GitHub Release
 
             ```bash
             # Download the chart
@@ -81,6 +119,13 @@ jobs:
 
             # Install the chart
             helm install my-release ./aws-multi-eni-controller-${{ env.CHART_VERSION }}.tgz
+            ```
+
+            ### Option 2: Install from OCI Registry (Recommended)
+
+            ```bash
+            # Add the OCI registry
+            helm install my-release oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/aws-multi-eni-controller --version ${{ env.CHART_VERSION }}
             ```
 
             ## Configuration
@@ -92,10 +137,11 @@ jobs:
           draft: false
           prerelease: false
 
+      # Display instructions for using the chart
       - name: Display instructions for using the Helm chart
         run: |
-          echo "::notice::Helm chart has been published as a GitHub Release."
-          echo "::notice::To use the chart, download it from:"
+          echo "::notice::Helm chart has been published as a GitHub Release and to GHCR as an OCI artifact."
+          echo "::notice::Option 1: Download from GitHub Release:"
           echo "::notice::https://github.com/${{ github.repository }}/releases/download/helm-chart-${{ env.CHART_VERSION }}/aws-multi-eni-controller-${{ env.CHART_VERSION }}.tgz"
-          echo "::notice::Then install the chart with:"
-          echo "::notice::helm install my-release ./aws-multi-eni-controller-${{ env.CHART_VERSION }}.tgz"
+          echo "::notice::Option 2: Install from OCI Registry (Recommended):"
+          echo "::notice::helm install my-release oci://${{ env.REGISTRY }}/${{ github.repository_owner }}/charts/aws-multi-eni-controller --version ${{ env.CHART_VERSION }}"
