--- a/.github/workflows/docker-build-beta.yml
+++ b/.github/workflows/docker-build-beta.yml
@@ -59,6 +59,13 @@ jobs:
       - name: Display test coverage
         run: go tool cover -func=coverage.txt
 
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: coverage.txt
+          retention-days: 7
+
       - name: Extract branch name
         shell: bash
         run: |
